--- a/Readme
+++ b/Readme
@@ -1,436 +1,1 @@
-# 🤖 V.A.U.L.T - Virtual Assistant & Universal Learning Tool
-
-<div align="center">
-
-![V.A.U.L.T Status](https://img.shields.io/badge/Status-Active%20Development-brightgreen?style=for-the-badge)
-![Python](https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white)
-![AI Powered](https://img.shields.io/badge/AI-Powered-FF6B6B?style=for-the-badge&logo=openai&logoColor=white)
-![Version](https://img.shields.io/badge/Version-3.0-4ECDC4?style=for-the-badge)
-
-**[🚀 Live Demo](https://vault-demo.kutaykilic.dev)** | **[📱 Mobile App](https://apps.apple.com/vault-app)** | **[📚 Documentation](https://docs.vault.dev)**
-
-*Gelişmiş yapay zeka teknolojileri ile güçlendirilmiş modüler asistan sistemi*
-
----
-
-</div>
-
-## 📋 İçerik
-
-- [Hakkında](#-hakkında)
-- [Özellikler](#-özellikler)
-- [MARK Versiyonları](#-mark-versiyonları)
-- [Teknolojiler](#-teknolojiler)
-- [Kurulum](#-kurulum)
-- [Kullanım](#-kullanım)
-- [Proje Yapısı](#-proje-yapısı)
-- [Özelleştirme](#-özelleştirme)
-- [Deployment](#-deployment)
-- [Katkıda Bulunma](#-katkıda-bulunma)
-- [İletişim](#-i̇letişim)
-
-## 🎯 Hakkında
-
-**V.A.U.L.T** (Virtualized Automated Utility & Logic Tool), Jarvis benzeri bir asistan oluşturmayı hedefleyen modüler bir proje koleksiyonudur. Her MARK iterasyonu (`MARK2`, `MARK3`, ... `MARK9`) yeni özellikler ve iyileştirmeler içererek, basit scriptlerden karmaşık AI destekli iş akışlarına kadar geniş bir yelpazede çözümler sunar.
-
-### ✨ Temel Amacı
-- **Modüler Geliştirme**: Her MARK versiyonu ile gelişen özellikler
-- **Otomasyon**: İş başvuru, verimlilik araçları ve sistem yardımcıları
-- **AI Entegrasyonu**: Gelişmiş yapay zeka destekli deneyimler
-- **Ölçeklenebilirlik**: Gelecek iterasyonlar için esnek yapı
-
-### 🌟 Ne Yapar?
-- MARK serisi ile modüler proje yönetimi sağlar
-- Otomatik iş başvuru sistemleri sunar
-- AI destekli verimlilik araçları geliştirir
-- Sistem automatizasyonu ve yardımcı scriptler içerir
-- Jarvis benzeri asistan deneyimi oluşturur
-
-## 🌟 Özellikler
-
-### 🎨 Modüler Tasarım
-- **MARK Versiyonları**: Ayrı projeler halinde organize edilmiş iterasyonlar
-- **Progressive Development**: Her versiyon ile artan karmaşıklık ve özellikler
-- **Flexible Architecture**: Gelecek geliştirmeler için uyarlanabilir yapı
-- **Isolated Components**: Bağımsız çalışabilir modüller
-
-### 🤖 AI & Automation
-- **Smart Scripts**: Akıllı otomasyon scriptleri
-- **Job Application Automation**: Otomatik iş başvuru sistemi
-- **Productivity Tools**: Verimlilik artırıcı araçlar
-- **System Helpers**: Sistem yönetimi yardımcıları
-
-### 🔧 Development Features
-- **Version Control**: Git tabanlı versiyon yönetimi
-- **Modular Configs**: Yapılandırılabilir ayarlar
-- **CLI Support**: Komut satırı arayüzü desteği
-- **Cross-Platform**: Çoklu platform uyumluluğu
-
-### 🚀 Future Ready
-- **Scalable Structure**: Ölçeklenebilir yapı
-- **Plugin System**: Genişletilebilir eklenti sistemi
-- **API Integration**: Üçüncü parti servis entegrasyonları
-- **Unified Assistant**: Gelecekte birleşik asistan vizyonu
-
-## 📊 MARK Versiyonları
-
-### 🔄 Mevcut İterasyonlar
-
-| Version | Status | Açıklama | Ana Özellikler |
-|:-------:|:------:|:---------|:--------------|
-| **MARK2** | ✅ **Stable** | Temel AI Foundations | NLP, Basic Automation |
-| **MARK3** | ✅ **Stable** | Enhanced Scripting | Advanced Scripts, CLI |
-| **MARK4** | ✅ **Production** | Web Integration | API Support, Web UI |
-| **MARK5** | ✅ **Production** | Advanced Automation | Job Application Bot |
-| **MARK6** | ✅ **Production** | ML Integration | Machine Learning Features |
-| **MARK7** | 🚧 **Development** | Advanced AI | GPT Integration |
-| **MARK8** | 🚧 **Development** | Mobile Support | Cross-Platform |
-| **MARK9** | 🔄 **Planning** | Full Assistant | Unified Jarvis-like AI |
-
-### 🎯 Özel Projeler
-- **JARVIS PROJESI**: Ana asistan sistemi
-- **VAULT PROJESI**: Veri yönetimi ve güvenlik
-- **Otomatik İş Başvuru**: İş arama otomasyonu
-
-## 🛠 Teknolojiler
-
-### Core Technologies
-```
-🐍 Python          - Ana programlama dili
-🌐 JavaScript       - Frontend ve automation
-📄 HTML/CSS         - Web interface
-⚡ Node.js          - Backend services (opsiyonel)
-```
-
-### AI & Automation Stack
-- **OpenAI API**: GPT modelleri için AI entegrasyonu
-- **Selenium**: Web automation ve scraping
-- **BeautifulSoup**: HTML parsing ve data extraction
-- **Requests**: HTTP client ve API iletişimi
-- **Schedule**: Task scheduling ve automation
-
-### Development Tools
-- **GitHub Pages**: Hosting ve deployment
-- **Shields.io**: Badge ve status indicators
-- **CLI Tools**: Komut satırı arayüzleri
-- **Environment Configs**: Modüler konfigürasyon sistemi
-
-## 🚀 Kurulum
-
-### Ön Koşullar
-- Python 3.8 veya üzeri
-- Git
-- Code editor (VS Code önerilen)
-- Node.js (opsiyonel, bazı modüller için)
-
-### Hızlı Başlangıç
-
-1. **Repository'yi klonlayın**
-```bash
-git clone https://github.com/kutaykilicai/V.A.U.L.T.git
-cd V.A.U.L.T
-```
-
-2. **Proje yapısını inceleyin**
-```bash
-# Mevcut MARK versiyonlarını listeleyin
-ls -la
-```
-
-3. **Belirli bir MARK versiyonunu çalıştırın**
-```bash
-# Örnek: Otomatik İş Başvuru
-cd "Otomatik iş başvuru"
-python main.py --help
-```
-
-4. **Dependencies yükleyin**
-```bash
-# Her MARK klasöründe requirements.txt varsa
-pip install -r requirements.txt
-```
-
-### Environment Setup
-```bash
-# Virtual environment oluşturun
-python -m venv vault_env
-source vault_env/bin/activate  # Linux/Mac
-# vault_env\Scripts\activate    # Windows
-
-# Global dependencies
-pip install -r global_requirements.txt
-```
-
-## 💻 Kullanım
-
-### MARK Versiyonları ile Çalışma
-
-#### MARK2-MARK3 (Basic Operations)
-```bash
-cd "V.A.U.L.T MK2"
-python basic_assistant.py
-
-cd "V.A.U.L.T MK3"
-python enhanced_scripts.py --interactive
-```
-
-#### MARK4-MARK6 (Advanced Features)
-```bash
-cd "V.A.U.L.T MARK4"
-# Web interface başlatma
-python app.py --port 8000
-
-cd "V.A.U.L.T MARK5"
-# Job application automation
-python job_automation.py --config jobs.yaml
-```
-
-#### MARK7-MARK9 (AI Integration)
-```bash
-cd "V.A.U.L.T MARK7"
-# AI-powered features
-python ai_assistant.py --gpt-model gpt-4
-
-cd "V.A.U.L.T MARK8"
-# Mobile-ready features
-python mobile_interface.py --platform android
-```
-
-### Özel Projeler
-
-#### JARVIS Projesi
-```python
-from jarvis_core import JarvisAssistant
-
-assistant = JarvisAssistant()
-response = assistant.chat("Bugün hava nasıl?")
-print(response)
-```
-
-#### Otomatik İş Başvuru
-```bash
-cd "Otomatik iş başvuru"
-python job_bot.py --keywords "python developer" --location "Istanbul"
-```
-
-### Configuration
-```yaml
-# config.yaml
-vault:
-  version: "3.0"
-  active_marks: ["MARK4", "MARK5", "MARK6"]
-  
-automation:
-  job_search: true
-  email_notifications: true
-  
-ai:
-  provider: "openai"
-  model: "gpt-4"
-  max_tokens: 2048
-```
-
-## 📁 Proje Yapısı
-
-```
-V.A.U.L.T/
-├── 📁 V.A.U.L.T MK2/
-│   ├── basic_ai.py
-│   ├── nlp_utils.py
-│   └── README.md
-├── 📁 V.A.U.L.T MK3/
-│   ├── enhanced_scripts.py
-│   ├── automation/
-│   └── configs/
-├── 📁 V.A.U.L.T MARK4/
-│   ├── web_interface/
-│   ├── api/
-│   └── static/
-├── 📁 V.A.U.L.T MARK5/
-│   ├── job_automation.py
-│   ├── scrapers/
-│   └── templates/
-├── 📁 V.A.U.L.T MARK6/
-│   ├── ml_models/
-│   ├── training/
-│   └── inference/
-├── 📁 V.A.U.L.T MARK7/
-│   ├── ai_core/
-│   ├── gpt_integration/
-│   └── context_manager/
-├── 📁 V.A.U.L.T MARK8/
-│   ├── mobile_app/
-│   ├── cross_platform/
-│   └── responsive_ui/
-├── 📁 V.A.U.L.T MARK9/
-│   ├── unified_assistant/
-│   ├── full_integration/
-│   └── jarvis_complete/
-├── 📁 JARVIS PROJESI/
-│   ├── core/
-│   ├── modules/
-│   └── plugins/
-├── 📁 VAULT PROJESI/
-│   ├── security/
-│   ├── data_management/
-│   └── encryption/
-├── 📁 Otomatik iş başvuru/
-│   ├── job_bot.py
-│   ├── scrapers/
-│   └── templates/
-├── 📄 global_requirements.txt
-├── 📄 config.yaml
-└── 📄 README.md
-```
-
-## 🎨 Özelleştirme
-
-### MARK Versiyonu Seçme
-```python
-# vault_manager.py
-from vault_core import VaultManager
-
-manager = VaultManager()
-manager.activate_mark("MARK6")
-manager.load_features(["ai", "automation", "web"])
-```
-
-### Custom Automation
-```python
-# custom_automation.py
-from vault_automation import AutomationEngine
-
-engine = AutomationEngine()
-engine.add_task("daily_reports", schedule="09:00")
-engine.add_task("job_search", schedule="weekly")
-```
-
-### AI Model Configuration
-```yaml
-# ai_config.yaml
-models:
-  primary: "gpt-4"
-  fallback: "gpt-3.5-turbo"
-  
-features:
-  context_memory: true
-  learning_mode: true
-  personality: "professional"
-```
-
-## 🌐 Deployment
-
-### Local Development
-```bash
-# Development server başlatma
-python vault_dev.py --hot-reload --debug
-
-# Production mode
-python vault_prod.py --config production.yaml
-```
-
-### GitHub Pages Deployment
-```bash
-# Static site generation
-python generate_docs.py
-
-# GitHub Pages'e deploy
-git add docs/
-git commit -m "Update documentation"
-git push origin main
-```
-
-### Cloud Deployment
-- **Heroku**: Tek tıkla deployment için Procfile dahil
-- **AWS**: Lambda functions için serverless config
-- **Docker**: Containerization için Dockerfile'lar
-
-## 📊 Roadmap
-
-### Upcoming Features
-- [ ] MARK serilerinin birleştirilmesi
-- [ ] Environment configuration (.env) desteği
-- [ ] Her alt-proje için gelişmiş dokümantasyon
-- [ ] Ekran görüntüleri ve kullanım demoları
-- [ ] Seçili modüllerin standalone paket olarak yayınlanması
-
-### Long-term Vision
-- [ ] Unified Jarvis Assistant (MARK9)
-- [ ] Plugin marketplace
-- [ ] Mobile app integration
-- [ ] Enterprise features
-- [ ] Community contributions
-
-## 🤝 Katkıda Bulunma
-
-V.A.U.L.T projesine katkıda bulunmak istiyorsanız:
-
-### Development Workflow
-1. **Fork** edin
-2. **MARK branch** oluşturun (`git checkout -b mark/new-feature`)
-3. **Commit** edin (`git commit -m 'Add new MARK feature'`)
-4. **Push** edin (`git push origin mark/new-feature`)
-5. **Pull Request** oluşturun
-
-### Contribution Guidelines
-- Her MARK versiyonu için ayrı branch kullanın
-- Modüler kod yazın ve existing patterns'ı takip edin
-- Yeni özellikler için test ekleyin
-- Documentation'ı güncel tutun
-
-### Code Standards
-```bash
-# Code formatting
-black vault/ --line-length 88
-
-# Linting
-flake8 vault/ --max-line-length 88
-
-# Testing
-pytest tests/ -v --cov=vault
-```
-
-## 📄 Lisans
-
-Bu proje [MIT Lisansı](LICENSE) altında lisanslanmıştır.
-
-```
-MIT License
-
-Copyright (c) 2024 Kutay Kılıç
-
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction...
-```
-
-## 📞 İletişim
-
-<div align="center">
-
-**Kutay Kılıç** - *Creator & Lead Developer*
-
-[![Portfolio](https://img.shields.io/badge/Portfolio-Visit-blue?style=for-the-badge)](https://kutaykilicai.github.io/Kutay-portfolio.github.io/)
-[![LinkedIn](https://img.shields.io/badge/LinkedIn-Connect-blue?style=for-the-badge&logo=linkedin)](https://www.linkedin.com/in/kutay-k%C4%B1l%C4%B1%C3%A7-322409125/)
-[![Email](https://img.shields.io/badge/Email-Contact-red?style=for-the-badge&logo=gmail)](mailto:kutaykilic@gmail.com)
-[![GitHub](https://img.shields.io/badge/GitHub-Follow-black?style=for-the-badge&logo=github)](https://github.com/kutaykilicai)
-
-</div>
-
-### Destek ve Yardım
-- 🐛 **Bug Reports**: [GitHub Issues](https://github.com/kutaykilicai/V.A.U.L.T/issues)
-- 💡 **Feature Requests**: [GitHub Discussions](https://github.com/kutaykilicai/V.A.U.L.T/discussions)
-- 📚 **Documentation**: [Wiki](https://github.com/kutaykilicai/V.A.U.L.T/wiki)
-- 💬 **Community**: [Discord Server](https://discord.gg/vault-community)
-
----
-
-<div align="center">
-
-**⭐ Bu projeyi beğendiyseniz star vermeyi unutmayın! ⭐**
-
-*Made with ❤️ and 🤖 by Kutay Kılıç*
-
-**V.A.U.L.T - Virtual Assistant & Universal Learning Tool**
-
-</div>
+deneme
