--- a/Readme
+++ b/Readme
@@ -5,16 +5,14 @@
 
 <br>
 
-[![Status](https://img.shields.io/badge/Status-🔥_Active_Development-brightgreen?style=flat-square&labelColor=000000)](https://github.com/kutaykilicai/V.A.U.L.T)
-[![Python](https://img.shields.io/badge/Python-3.8+-3776AB?style=flat-square&logo=python&logoColor=white&labelColor=000000)](https://python.org)
-[![AI Powered](https://img.shields.io/badge/AI-🧠_Powered-FF6B6B?style=flat-square&labelColor=000000)](https://openai.com)
-[![License](https://img.shields.io/badge/License-MIT-blue?style=flat-square&labelColor=000000)](LICENSE)
+![Status](https://img.shields.io/badge/Status-🔥_Active_Development-brightgreen?style=flat-square&labelColor=000000)
+![Python](https://img.shields.io/badge/Python-3.8+-3776AB?style=flat-square&logo=python&logoColor=white&labelColor=000000)
+![AI Powered](https://img.shields.io/badge/AI-🧠_Powered-FF6B6B?style=flat-square&labelColor=000000)
+![License](https://img.shields.io/badge/License-MIT-blue?style=flat-square&labelColor=000000)
 
 **[🌐 Live Demo](https://vault-demo.kutaykilic.dev)** • **[📱 Mobile App](https://apps.apple.com/vault-app)** • **[📚 Docs](https://docs.vault.dev)**
 
 *Gelişmiş yapay zeka teknolojileri ile güçlendirilmiş, Jarvis benzeri modüler asistan sistemi*
-
-<img src="https://user-images.githubusercontent.com/placeholder/vault-hero.gif" alt="V.A.U.L.T Demo" width="600px">
 
 </div>
 
@@ -25,51 +23,16 @@
 V.A.U.L.T, **Iron Man'in Jarvis'i** gibi akıllı bir asistan yaratma hayalinden doğmuş, sürekli gelişen bir AI ekosistemidir. Her **MARK** versiyonu ile daha güçlü, daha akıllı, daha kullanışlı hale gelen bu proje, basit scriptlerden karmaşık AI destekli iş akışlarına kadar geniş bir yelpazede çözümler sunar.
 
 ### ✨ **Ne Yapıyoruz?**
-```
-🤖 Otomatik İş Başvuru Sistemleri  ┃  📊 Verimlilik Araçları
-🧠 AI Destekli Asistan Deneyimi    ┃  🔧 Sistem Otomasyonu  
-📱 Cross-Platform Uygulamalar      ┃  🎨 Modern Kullanıcı Arayüzleri
-```
+
+| 🤖 **AI & Automation** | 📊 **Productivity** |
+|:----------------------:|:------------------:|
+| Otomatik İş Başvuru Sistemleri | Verimlilik Araçları |
+| AI Destekli Asistan Deneyimi | Sistem Otomasyonu |
+| Cross-Platform Uygulamalar | Modern Kullanıcı Arayüzleri |
 
 ---
 
 ## 🛠️ **MARK Evolution Timeline**
-
-<div align="center">
-
-```mermaid
-timeline
-    title V.A.U.L.T Development Journey
-    
-    section Foundation
-        MARK2 : Basic AI Foundations
-              : NLP & Automation Core
-              
-        MARK3 : Enhanced Scripting
-              : CLI Tools & Advanced Scripts
-              
-    section Integration
-        MARK4 : Web Integration
-              : API Support & Web UI
-              
-        MARK5 : Advanced Automation
-              : Job Application Bot
-              
-        MARK6 : ML Integration  
-              : Machine Learning Features
-              
-    section AI Revolution
-        MARK7 : GPT Integration
-              : Advanced AI Capabilities
-              
-        MARK8 : Mobile & Cross-Platform
-              : Universal Accessibility
-              
-        MARK9 : The Jarvis Vision
-              : Unified AI Assistant
-```
-
-</div>
 
 ### 📊 **Version Status**
 
@@ -279,16 +242,12 @@ security:
 
 ### ☁️ **Cloud Deployment**
 
-<div align="center">
-
 | Platform | Status | Command | Notes |
 |:--------:|:------:|:--------|:------|
 | **Heroku** | ✅ Ready | `git push heroku main` | Auto-scale enabled |
 | **AWS Lambda** | ✅ Ready | `sam deploy` | Serverless functions |
 | **Google Cloud** | 🔄 Coming | `gcloud deploy` | Cloud Run support |
 | **Azure** | 🔄 Coming | `az container create` | Container instances |
-
-</div>
 
 ### 🏠 **Local Development**
 ```bash
@@ -324,9 +283,9 @@ python vault_prod.py --config production.yaml
 
 ### 🎉 **Join the V.A.U.L.T Revolution!**
 
-[![Contributors](https://img.shields.io/github/contributors/kutaykilicai/V.A.U.L.T?style=for-the-badge&color=blue)](https://github.com/kutaykilicai/V.A.U.L.T/graphs/contributors)
-[![Stars](https://img.shields.io/github/stars/kutaykilicai/V.A.U.L.T?style=for-the-badge&color=yellow)](https://github.com/kutaykilicai/V.A.U.L.T/stargazers)
-[![Forks](https://img.shields.io/github/forks/kutaykilicai/V.A.U.L.T?style=for-the-badge&color=green)](https://github.com/kutaykilicai/V.A.U.L.T/network)
+![Contributors](https://img.shields.io/github/contributors/kutaykilicai/V.A.U.L.T?style=for-the-badge&color=blue)
+![Stars](https://img.shields.io/github/stars/kutaykilicai/V.A.U.L.T?style=for-the-badge&color=yellow)
+![Forks](https://img.shields.io/github/forks/kutaykilicai/V.A.U.L.T?style=for-the-badge&color=green)
 
 </div>
 
@@ -386,14 +345,14 @@ Copyright (c) 2024 Kutay Kılıç
 
 ---
 
-```ascii
+```
 ██╗   ██╗     █████╗     ██╗   ██╗    ██╗     ████████╗
 ██║   ██║    ██╔══██╗    ██║   ██║    ██║     ╚══██╔══╝
 ██║   ██║    ███████║    ██║   ██║    ██║        ██║   
 ╚██╗ ██╔╝    ██╔══██║    ██║   ██║    ██║        ██║   
  ╚████╔╝  ██╗██║  ██║ ██╗╚██████╔╝ ██╗███████╗   ██║   
   ╚═══╝   ╚═╝╚═╝  ╚═╝ ╚═╝ ╚═════╝  ╚═╝╚══════╝   ╚═╝   
-                                                        
+
     Virtual Assistant & Universal Learning Tool
 ```
 
